# token-acl-testing-suite

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  CONTRIBUTORS.md  CURRENT_TEST_COVERAGE.md  Cargo.toml  GITHUB_PUBLICATION_SUMMARY.md  INDEX.md  INSTALL.md  LICENSE  Makefile  PRODUCTION_READY_SUMMARY.md  PUBLISH_CHECKLIST.md  PUSH_TO_GITHUB.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_ORIGINAL.md  READY_TO_PUBLISH.md  SECURITY_VALIDATION.md  TEST_PLAN.md  cleanup.sh  clippy.toml  edition2024_error_report.md  run_tests.sh  rustfmt.toml  setup.sh  test_edition2024  test_edition2024.rs  test_optimizations.sh
.github/workflows/: tests.yml
demos/: README.md  SETUP_COMPLETE.md  WEB3JS_VERSION_NOTE.md  package.json  tsconfig.json
demos/src/: geo-blocking-demo.ts  kyc-allowlist-demo.ts  run-all-demos.ts  sanctions-list-demo.ts
demos/src/lib/: spl-token-integration-v1.ts  spl-token-integration.ts  token-acl-helpers-v1.ts  token-acl-helpers.ts
docs/: FINAL_SUMMARY.md  IMPLEMENTATION_GUIDE.md  README.md  TESTING_COMPLETE.md  api-reference.md  architecture.md  getting-started.md  optimization-summary.md  testing-guide.md  validation-report.md
examples/: README.md
examples/allow_list/: Cargo.toml
examples/allow_list/src/: lib.rs
examples/block_list/: Cargo.toml
examples/block_list/src/: lib.rs
gate_programs/allow_list/: Cargo.toml
gate_programs/allow_list/src/: lib.rs
gate_programs/allow_list_production/: Cargo.toml
gate_programs/allow_list_production/src/: lib.rs
gate_programs/block_list/: Cargo.toml
gate_programs/block_list/src/: lib.rs
programs/: README.md
programs/production_allow_list/: Cargo.toml  README.md
programs/production_allow_list/src/: lib.rs
scripts/: build.sh  clean.sh  dev-setup.sh  performance-monitor.sh  run_all_tests.sh  run_comprehensive_tests.sh  security-audit.sh  setup.sh  test.sh
test-results/: ADVANCED_SCENARIOS_RESULTS.md  CORE_LOGIC_TEST_RESULTS.md  README.md  REAL_TEST_RESULTS.md  test_output.txt
tests/integration/: Cargo.toml
tests/integration/src/: benchmarks.rs  common.rs  coverage.rs  fixtures.rs  lib.rs  logging.rs
tests/integration/tests/: advanced_scenarios.rs  core_logic.rs  core_logic_tests.rs  integration.rs  integration_tests.rs  mod.rs  performance_benchmarks.rs  security_tests.rs  test_runner.rs
tests/test-client/: Cargo.toml
tests/test-client/src/: actual_tests.rs  composability.rs  gate_program_interface.rs  integration_flow_test.rs  lib.rs  main.rs  managed_freeze_authority.rs  permissionless_operations.rs  rwa_workflow_test.rs  security.rs  security_malicious_injection_test.rs
