[workspace]
members = [
    "tests/integration",
    "examples/allow_list",
    "examples/block_list",
    "programs/production_allow_list"
]
resolver = "2"

[workspace.metadata]
name = "token-acl-testing-suite"
description = "Comprehensive testing suite for sRFC 37 Token ACL standard"
version = "1.0.0"
authors = ["Token ACL Contributors"]
license = "MIT"
repository = "https://github.com/BlocksOnAChain/token-acl-testing-suite"
homepage = "https://github.com/BlocksOnAChain/token-acl-testing-suite"
documentation = "https://github.com/BlocksOnAChain/token-acl-testing-suite/tree/main/docs"
keywords = ["solana", "token", "acl", "testing", "srf37", "permissioned-tokens"]
categories = ["cryptography", "development-tools"]

[workspace.dependencies]
solana-program = "1.18"
solana-sdk = "1.18"
solana-program-test = "1.18"
spl-token-2022 = { version = "1.0", features = ["serde-traits"] }
spl-tlv-account-resolution = "0.5"
borsh = "0.10"
tokio = { version = "1.48", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"


[profile.release]
# Optimize for size and speed
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster compilation for development
opt-level = 0
debug = true
incremental = true

