[package]
name = "gate-program-allow-list-production"
version = "1.0.0"
edition = "2021"
description = "Production-ready allow list gate program for Token ACL"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18"
borsh = "0.10"
spl-tlv-account-resolution = "0.5"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"

[features]
no-entrypoint = []

