[package]
name = "token_acl_integration_tests"
version = "1.0.0"
edition = "2021"

[dependencies]
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-program-test = { workspace = true }
spl-token-2022 = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
borsh = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
proptest = "1"

[[test]]
name = "integration_tests"
path = "tests/integration.rs"

[[test]]
name = "core_logic_tests"
path = "tests/core_logic.rs"

[[test]]
name = "advanced_scenarios"
path = "tests/advanced_scenarios.rs"

[[test]]
name = "security_tests"
path = "tests/security_tests.rs"

[[test]]
name = "performance_benchmarks"
path = "tests/performance_benchmarks.rs"

